chore: cleaned the 20-30+ warnings mess out of some serializable recipes, made it more bearable for addons to add recipes there